fixed alot of stuff

--- a/Videos/Clix_Team_Selector.html
+++ b/Videos/Clix_Team_Selector.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../video.css" />
+    <link rel="stylesheet" href="../css/video.css" />
     <link rel="icon" href="../Images/Website Icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="../main.js"></script>
+    <script src="../js/main.js"></script>
 
     <title>VukeFN | Videos</title>
 </head>
