--- a/Videos/playlists.html
+++ b/Videos/playlists.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../playlists.css" />
+    <link rel="stylesheet" href="../css/playlists.css" />
     <link rel="icon" href="../Images/Website Icon.png" />
     <script src="../video.js"></script>
     <title>VukeFN | Videos</title>
