--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="icon" href="../Images/Website Icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="../main.js"></script>
+    <script src="../js/main.js"></script>
     <title>VukeFN | Videos</title>
 </head>
 
@@ -29,130 +29,110 @@
                         <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
                     </li>
                     <li class="item">
-                        <a href="https://VukeFN.github.io/Videos/playlists.html">PLAYLISTS</a
-              >
-            </li>
-          </ul>
-          <ul class="nav-menu-button">
-            <ion-icon
-              name="menu-outline"
-              id="nav-menu-icon"
-              onclick="openNav()"
-            ></ion-icon>
-            <div class="nav-menu" id="nav-menu">
-              <li class="item">
-                <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
+                        <a href="https://VukeFN.github.io/Videos/playlists.html">PLAYLISTS</a>
                     </li>
-                    <li class="item">
-                        <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
-                    </li>
-                    <li class="item">
-                        <a href="https://discord.gg/uzjyMmG">DISCORD</a>
-                    </li>
-            </div>
-            </ul>
-            </div>
+                </ul>
 
-            <div id="sidebar" class="sidebar">
-                <div class="sidebar-header">
-                    <ion-icon name="menu-outline" class="sidebar-button" id="sidebar-button" onclick="closeSideBar()"></ion-icon>
-                    <div class="sidebar-logo">
-                        <a href="https://vukefn.github.io/">
-                            <img src="../Images/Website Logo.png" alt="Website's Logo" width="180" />
+                <div id="sidebar" class="sidebar">
+                    <div class="sidebar-header">
+                        <ion-icon name="menu-outline" class="sidebar-button" id="sidebar-button" onclick="closeSideBar()"></ion-icon>
+                        <div class="sidebar-logo">
+                            <a href="https://vukefn.github.io/">
+                                <img src="../Images/Website Logo.png" alt="Website's Logo" width="180" />
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-playlists">
+                        <h2>PLAYLISTS</h2>
+                        <div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>BHE 1v1 MAP</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>CLIX BOXFIGHTS</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>FLEA</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>BHE BOXFIGHTS</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>BHE SPAWN ISLAND</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-playlist">
+                                <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                                <a href="">
+                                    <h3>BHE START ISLAND</h3>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-unfinished-videos">
+                        <h2>UNFINISHED</h2>
+                        <div>
+                            <div class="sidebar-unfinished-video">
+                                <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                                <a href="">
+                                    <h3>TEAM SELECTOR (OLD)</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-unfinished-video">
+                                <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                                <a href="">
+                                    <h3>TEAM SELECTOR (OLD)</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-unfinished-video">
+                                <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                                <a href="">
+                                    <h3>TEAM SELECTOR (OLD)</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-unfinished-video">
+                                <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                                <a href="">
+                                    <h3>TEAM SELECTOR (OLD)</h3>
+                                </a>
+                            </div>
+                            <div class="sidebar-unfinished-video">
+                                <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                                <a href="">
+                                    <h3>TEAM SELECTOR (OLD)</h3>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-footer">
+                        <a href="https://youtube.com/c/vukefn" target="blank_">
+                            <img class="social-media" src="../Images/YouTube.png" />
+                        </a>
+                        <a href="https://discord.gg/uzjyMmG" target="blank_">
+                            <img class="social-media" src="../Images/Discord.png" />
+                        </a>
+                        <a href="https://twitter.com/vukefn" target="blank_">
+                            <img class="social-media" src="../Images/Twitter.png" />
                         </a>
                     </div>
                 </div>
-
-                <div class="sidebar-playlists">
-                    <h2>PLAYLISTS</h2>
-                    <div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>BHE 1v1 MAP</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>CLIX BOXFIGHTS</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>FLEA</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>BHE BOXFIGHTS</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>BHE SPAWN ISLAND</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-playlist">
-                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                            <a href="">
-                                <h3>BHE START ISLAND</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="sidebar-unfinished-videos">
-                    <h2>UNFINISHED</h2>
-                    <div>
-                        <div class="sidebar-unfinished-video">
-                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                            <a href="">
-                                <h3>TEAM SELECTOR (OLD)</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-unfinished-video">
-                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                            <a href="">
-                                <h3>TEAM SELECTOR (OLD)</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-unfinished-video">
-                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                            <a href="">
-                                <h3>TEAM SELECTOR (OLD)</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-unfinished-video">
-                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                            <a href="">
-                                <h3>TEAM SELECTOR (OLD)</h3>
-                            </a>
-                        </div>
-                        <div class="sidebar-unfinished-video">
-                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                            <a href="">
-                                <h3>TEAM SELECTOR (OLD)</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="sidebar-footer">
-                    <a href="https://youtube.com/c/vukefn" target="blank_">
-                        <img class="social-media" src="../Images/YouTube.png" />
-                    </a>
-                    <a href="https://discord.gg/uzjyMmG" target="blank_">
-                        <img class="social-media" src="../Images/Discord.png" />
-                    </a>
-                    <a href="https://twitter.com/vukefn" target="blank_">
-                        <img class="social-media" src="../Images/Twitter.png" />
-                    </a>
-                </div>
-            </div>
         </nav>
     </header>
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
