added gear popup

--- a/Videos/Clix_Team_Selector.html
+++ b/Videos/Clix_Team_Selector.html
@@ -235,11 +235,20 @@
             </ul>
 
             <div class="settings-buttons">
-                <div class="gear-btn">
+                <div class="gear-btn" id="gear-btn" onclick="openGearPopup()">
                     <ion-icon name="settings-sharp"></ion-icon>
                 </div>
                 <div class="ok-btn" onclick="closeDeviceSettings()">ok</div>
                 <div class="cancel-btn" onclick="closeDeviceSettings()">cancel</div>
+            </div>
+
+            <div class="gear-popup" id="gear-popup">
+                <a href="https://www.youtube.com/watch?v=YgiAJ-3v0_Y&t=75s" target="blank_">
+                    <h3>Mark as done</h3>
+                </a>
+                <a href="https://www.youtube.com/watch?v=YgiAJ-3v0_Y&t=75s" target="blank_">
+                    <h3>Show in video</h3>
+                </a>
             </div>
         </section>
 
