--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <a href="https://VukeFN.github.io/videos.html">VIDEOS</a>
                     </li>
                     <li class="item">
-                        <a href="https://VukeFN.github.io/playlists.html">PLAYLISTS</a
-              >
-            </li>
-          </ul>
+                        <a href="https://VukeFN.github.io/playlists.html">PLAYLISTS</a>
+                    </li>
+                </ul>
+            </div>
 
             <div id="sidebar" class="sidebar">
                 <div class="sidebar-header">
@@ -45,98 +45,98 @@
                         <a href="https://vukefn.github.io/">
                             <img src="../Images/Website Logo.png" alt="Website's Logo" width="180" />
                         </a>
-            </div>
-            </div>
-
-            <div class="sidebar-playlists">
-                <h2>PLAYLISTS</h2>
-                <div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>BHE 1v1 MAP</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>CLIX BOXFIGHTS</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>FLEA</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>BHE BOXFIGHTS</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>BHE SPAWN ISLAND</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-playlist">
-                        <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
-                        <a href="">
-                            <h3>BHE START ISLAND</h3>
-                        </a>
                     </div>
                 </div>
-            </div>
 
-            <div class="sidebar-unfinished-videos">
-                <h2>UNFINISHED</h2>
-                <div>
-                    <div class="sidebar-unfinished-video">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                        <a href="">
-                            <h3>TEAM SELECTOR (OLD)</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-unfinished-video">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                        <a href="">
-                            <h3>TEAM SELECTOR (OLD)</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-unfinished-video">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                        <a href="">
-                            <h3>TEAM SELECTOR (OLD)</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-unfinished-video">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                        <a href="">
-                            <h3>TEAM SELECTOR (OLD)</h3>
-                        </a>
-                    </div>
-                    <div class="sidebar-unfinished-video">
-                        <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
-                        <a href="">
-                            <h3>TEAM SELECTOR (OLD)</h3>
-                        </a>
+                <div class="sidebar-playlists">
+                    <h2>PLAYLISTS</h2>
+                    <div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>BHE 1v1 MAP</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>CLIX BOXFIGHTS</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>FLEA</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>BHE BOXFIGHTS</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>BHE SPAWN ISLAND</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-playlist">
+                            <img src="https://img.icons8.com/material-outlined/24/FFFFFF/video-playlist.png" />
+                            <a href="">
+                                <h3>BHE START ISLAND</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="sidebar-footer">
-                <a href="https://youtube.com/c/vukefn" target="blank_">
-                    <img class="social-media" src="../Images/YouTube.png" />
-                </a>
-                <a href="https://discord.gg/uzjyMmG" target="blank_">
-                    <img class="social-media" src="../Images/Discord.png" />
-                </a>
-                <a href="https://twitter.com/vukefn" target="blank_">
-                    <img class="social-media" src="../Images/Twitter.png" />
-                </a>
-            </div>
+                <div class="sidebar-unfinished-videos">
+                    <h2>UNFINISHED</h2>
+                    <div>
+                        <div class="sidebar-unfinished-video">
+                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                            <a href="">
+                                <h3>TEAM SELECTOR (OLD)</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-unfinished-video">
+                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                            <a href="">
+                                <h3>TEAM SELECTOR (OLD)</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-unfinished-video">
+                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                            <a href="">
+                                <h3>TEAM SELECTOR (OLD)</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-unfinished-video">
+                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                            <a href="">
+                                <h3>TEAM SELECTOR (OLD)</h3>
+                            </a>
+                        </div>
+                        <div class="sidebar-unfinished-video">
+                            <img src="../Thumbnails/Team Selector Mechanic.jpg" width="40" />
+                            <a href="">
+                                <h3>TEAM SELECTOR (OLD)</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sidebar-footer">
+                    <a href="https://youtube.com/c/vukefn" target="blank_">
+                        <img class="social-media" src="../Images/YouTube.png" />
+                    </a>
+                    <a href="https://discord.gg/uzjyMmG" target="blank_">
+                        <img class="social-media" src="../Images/Discord.png" />
+                    </a>
+                    <a href="https://twitter.com/vukefn" target="blank_">
+                        <img class="social-media" src="../Images/Twitter.png" />
+                    </a>
+                </div>
             </div>
         </nav>
     </header>
@@ -148,7 +148,7 @@
         <section class="grid-item">
             <h1>GETTING STARTED!</h1>
             <p>Go to the Videos Page.</p>
-            <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
+            <a href="https://VukeFN.github.io/videos.html">VIDEOS</a>
         </section>
         <section class="grid-item">
             <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" />
