--- a/Videos/index.html
+++ b/Videos/index.html
@@ -26,10 +26,10 @@
             <div class="nav-items-div">
                 <ul class="nav-list">
                     <li class="item">
-                        <a href="https://VukeFN.github.io/videos.html">VIDEOS</a>
+                        <a href="https://VukeFN.github.io/Videos/">VIDEOS</a>
                     </li>
                     <li class="item">
-                        <a href="https://VukeFN.github.io/playlists.html">PLAYLISTS</a>
+                        <a href="https://VukeFN.github.io/Playlists/">PLAYLISTS</a>
                     </li>
                 </ul>
             </div>
