--- a/Videos/index.html
+++ b/Videos/index.html
@@ -148,7 +148,7 @@
                     <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector.html">
                         <img loading="lazy" src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
-                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector.html">
+                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector_Chapter_3">
                         <p class="video-title">How to Make Clix Team Selector</p>
                     </a>
                 </div>
