Added the latest Video

--- a/Videos/index.html
+++ b/Videos/index.html
@@ -145,13 +145,23 @@
             </div>
             <div class="videos-grid">
                 <div class="video">
-                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector.html">
+                    <a href="https://VukeFN.github.io/Videos/Headshot_Only_Gamemode">
+                        <img loading="lazy" src="/Thumbnails/Headshot Only Gamemode.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                    </a>
+                    <a href="https://VukeFN.github.io/Videos/Headshot_Only_Gamemode">
+                        <p class="video-title">How to Make a Headshot Only Gamemode</p>
+                    </a>
+                </div>
+
+                <div class="video">
+                    <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector_Chapter_3">
                         <img loading="lazy" src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="https://VukeFN.github.io/Videos/Clix_Team_Selector_Chapter_3">
                         <p class="video-title">How to Make Clix Team Selector</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -160,6 +170,7 @@
                         <p class="video-title">How to Make Clix Loadout Selector</p>
                     </a>
                 </div>
+
                 <div class="video">
                     <a href="#">
                         <img loading="lazy" src="../Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
