--- a/Videos/Headshot_Only_Gamemode/index.html
+++ b/Videos/Headshot_Only_Gamemode/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/video.css" />
     <link rel="icon" href="/Images/Website Icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     <script src="/js/headshot_only.js"></script>
 
@@ -212,6 +213,10 @@
                 <div>
                     <h3>TIME LIMIT</h3>
                     <span>10 MINUTES</span>
+                </div>
+                <div>
+                    <h3>ELIMINATIONS TO END</h3>
+                    <span>20</span>
                 </div>
             </div>
         </section>
