--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="icon" href="./Images/Website Icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
     <title>VukeFN | Videos</title>
 </head>
