trying out ads :+1:

--- a/Videos/index.html
+++ b/Videos/index.html
@@ -140,6 +140,14 @@
     <div id="lower-opacity" class="lower-opacity" onclick="closeSideBar()"></div>
 
     <main id="main">
+        <section class="ad">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+            <!-- Home Page Ad Unit -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </section>
         <section>
             <div>
                 <h2 class="page-title">VIDEOS</h2>
@@ -385,6 +393,14 @@
                     </a>
                 </div>
             </div>
+        </section>
+        <section class="ad">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+            <!-- Home Page Ad Unit -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </section>
     </main>
 
